Import of BDFOY/Module-Extract-Namespaces-0.11_01 from CPAN.
gitpan-cpan-distribution: Module-Extract-Namespaces
gitpan-cpan-version:      0.11_01
gitpan-cpan-path:         BDFOY/Module-Extract-Namespaces-0.11_01.tar.gz
gitpan-cpan-author:       BDFOY
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -3,3 +3,7 @@
 	* Extract the package declarations in a file to see which namespaces
 	are in it
 
+0.11_01 - Fri Aug  8 06:06:48 2008
+	* Handle the PDOMs a bit more carefully in case things
+	go terribly wrong
+
